fix: navbar was sticking out in the body

--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -8,6 +8,7 @@ body {
     background: var(--background-color);
     margin: 0;
     font-family: $base-font-family;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
